-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 10
-
Component/s: core-libs
-
b27
-
windows
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8196268 | 8u191 | Ivan Gerasimov | P4 | Resolved | Fixed | b01 |
| JDK-8201114 | 8u181 | Unassigned | P4 | Resolved | Fixed | b01 |
| JDK-8191188 | 8u172 | Ivan Gerasimov | P4 | Resolved | Fixed | b01 |
| JDK-8203117 | emb-8u181 | Ivan Gerasimov | P4 | Resolved | Fixed | master |
| JDK-8191371 | 7u181 | Ivan Gerasimov | P4 | Resolved | Fixed | b01 |
| JDK-8194411 | 6u191 | Ivan Gerasimov | P4 | Resolved | Fixed | b02 |
- backported by
-
JDK-8191188 Fix VS10 build after "8187658: Bigger buffer for GetAdaptersAddresses"
-
- Resolved
-
-
JDK-8191371 Fix VS10 build after "8187658: Bigger buffer for GetAdaptersAddresses"
-
- Resolved
-
-
JDK-8194411 Fix VS10 build after "8187658: Bigger buffer for GetAdaptersAddresses"
-
- Resolved
-
-
JDK-8196268 Fix VS10 build after "8187658: Bigger buffer for GetAdaptersAddresses"
-
- Resolved
-
-
JDK-8201114 Fix VS10 build after "8187658: Bigger buffer for GetAdaptersAddresses"
-
- Resolved
-
-
JDK-8203117 Fix VS10 build after "8187658: Bigger buffer for GetAdaptersAddresses"
-
- Resolved
-
- relates to
-
JDK-8187658 Bigger buffer for GetAdaptersAddresses
-
- Closed
-