8188855: Fix VS10 build after "8187658: Bigger buffer for GetAdaptersAddresses"

Reviewed-by: vtewari, simonis